--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="icon" href="img/logo.jpeg" />
 
-    <title>מוסך דרעי</title>
+    <title>מ.ד.א.י</title>
   </head>
   <body>
     <div id="root" style="background-color: #e9ecef"></div>
